release/k8s/ingress/logger.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logger-ing
  labels:
    name: logger-ing
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: logger-svc
            port:
              number: 2345
