release/k8s/ingress/project.v05.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ing
  labels:
    name: dwk-ing
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dwk-svc
                port:
                  number: 2346
